<resources>
    <string name="app_name">TuneBox</string>
    <string name="bsString">Banda Sonora</string>
    <string name="rockString">Rock</string>
    <string name="indieString">Indie</string>
    <string name="metalString">Metal</string>
    <string name="popString">Pop</string>
    <string name="reggaetonString">Reggaeton</string>
    <string name="classicalString">Música Clásica</string>
    <string name="technoString">Techno</string>
    <string name="hiphopString">Hip Hop</string>
    <string name="flamencoString">Flamenco</string>
    <string name="genreString">Selecciona un género musical</string>
    <string name="avatarSpeakableText">Avatar de tu perfil</string>
    <string name="signGoogle">¡Inicia sesión con Google!</string>
    <string name="buttonBackSpeakableText">Botón para ir hacia el anterior fragmento</string>
    <string name="quieres_borrar_este_tune">¿Quieres borrar este tune?</string>
    <string name="quieres_borrar_este_user">¿Quieres borrar tu usuario?</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="confirm">Confirmar</string>
    <string name="avatar_del_usuario">Avatar del usuario</string>
    <string name="stay_tuned">Stay tuned!</string>
    <string name="publicar">Publicar</string>
    <string name="icono_de_la_app">Icono de la app</string>
    <string name="email">Email</string>
    <string name="user">Usuario</string>
    <string name="pName">Nombre</string>
    <string name="contrase_a">Contraseña</string>
    <string name="contrase_a_nueva">Nueva contraseña</string>
    <string name="no_tienes_cuenta_reg_strate">¿No tienes cuenta? Regístrate</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="g_nero_musical_favorito">Género musical favorito:\ </string>
    <string name="spinnerGenre">Spinner con géneros musicales</string>
    <string name="genreSpinnerSpeakable">Spinner de géneros musicales</string>
    <string name="nombre">Nombre</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="registrar">REGISTRAR</string>
    <string name="ya_tienes_cuenta_inicia_sesi_n">¿Ya tienes cuenta? Inicia sesión</string>
    <string name="addTune">"Escribe un mensaje tune "</string>
    <string name="notValidEmail">"Email no válido..."</string>
    <string name="wrongData">Datos erróneos...</string>
    <string name="correctUser">¡Usuario y contraseña correctos!</string>
    <string name="fillBothFields">¡Rellena ambos campos!</string>
    <string name="fetching">Buscando artículos...</string>
    <string name="registerSuccess">¡Usuario registrado con éxito!</string>
    <string name="existError">¡Ese usuario ya existe!</string>
    <string name="avatarError">¡Avatar no seleccionado!</string>
    <string name="errorFieldsNotFilled">Falta rellenar algún campo... Recuerda que el usuario tampoco puede contener espacios</string>
    <string name="googleButtonSText">Botón para iniciar sesión con Google</string>
    <string name="passLengthError">La contraseña debe tener una longitud 6 o superior.</string>
    <string name="existUser">Ese nombre de usuario ya existe...</string>
    <string name="minEdadError">Debes tener más de 13 años...</string>
    <string name="existEmailError">Ya existe una cuenta con este correo electrónico...</string>
    <string name="errorCreate">Ocurrió un error al crear la cuenta...</string>
    <string name="bChangeAvatarText">Cambiar avatar</string>
    <string name="bChangePublicName">Cambiar nombre público</string>
    <string name="bChangeFavGenre">Cambiar gusto musical</string>
    <string name="bChangePass">Cambiar contraseña</string>
    <string name="bDisconnect">Cerrar sesión</string>
    <string name="bDelete">Borrar cuenta</string>
    <string name="changedPassCorrectly">¡Contraseña cambiada correctamente! Inicie sesión de nuevo...</string>
    <string name="avatarChangedConfirmed">¡Avatar cambiado con éxito!</string>
    <string name="pNameChangedConfirmed">¡Nombre público cambiado con éxito!</string>
    <string name="deletedUserConfirmed">Usuario borrado con éxito</string>
    <string name="genreChangedConfirmed">¡Género musical cambiado correctamente!</string>
    <string name="errorChangeGenre">¡Error al cambiar de género!</string>
</resources>