<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    android:gravity="center"
    tools:context=".LoginFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="30dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/icono_de_la_app"
                    android:src="@drawable/logo_animado" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="#FFbf407f"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stay_tuned"
                    android:textAlignment="center"
                    android:textColor="#FFbf407f"
                    android:textSize="14sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/emailBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@drawable/borde_edittext"
                    android:ems="10"
                    android:fontFamily="sans-serif"
                    android:gravity="center|start"
                    android:hint="@string/email"
                    android:inputType="text|textEmailAddress"
                    android:minHeight="48dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/main_purple_variant_bright"
                    android:textColorHint="#88BF40BF"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <EditText
                    android:id="@+id/passBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@drawable/borde_edittext"
                    android:ems="10"
                    android:fontFamily="sans-serif"
                    android:gravity="center|start"
                    android:hint="@string/contrase_a"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/main_purple_variant_bright"
                    android:textColorHint="#88BF40BF"
                    android:textSize="20sp" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/bLogin"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_bgless_button"
                    android:fontFamily="sans-serif"
                    android:padding="5dp"
                    android:text="@string/iniciar_sesi_n"
                    android:textAlignment="center"
                    android:textColor="#FFbf407f"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/registerText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:minHeight="48dp"
                    android:text="@string/no_tienes_cuenta_reg_strate"
                    android:textAlignment="center"
                    android:textColor="@color/main_purple"
                    android:textSize="14sp"
                    android:textStyle="italic" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>