<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    android:gravity="center"
    tools:context=".RegisterFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="30dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:gravity="center|top"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="155dp"
                    android:layout_height="155dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="250dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        app:cardCornerRadius="250dp"
                        app:cardElevation="100dp">

                        <ImageView
                            android:id="@+id/ivAvatar"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:contentDescription="@string/avatar_del_usuario"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/ic_launcher_background" />

                    </androidx.cardview.widget.CardView>

                </androidx.cardview.widget.CardView>


            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/userBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@drawable/borde_edittext"
                    android:ems="10"
                    android:fontFamily="sans-serif"
                    android:gravity="center|start"
                    android:hint="@string/user"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/main_purple_variant_bright"
                    android:textColorHint="#88BF40BF"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <EditText
                    android:id="@+id/emailBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@drawable/borde_edittext"
                    android:ems="10"
                    android:fontFamily="sans-serif"
                    android:gravity="center|start"
                    android:hint="@string/email"
                    android:inputType="text|textEmailAddress"
                    android:minHeight="48dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/main_purple_variant_bright"
                    android:textColorHint="#88BF40BF"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <EditText
                    android:id="@+id/passBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@drawable/borde_edittext"
                    android:ems="10"
                    android:fontFamily="sans-serif"
                    android:gravity="center|start"
                    android:hint="@string/contrase_a"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/main_purple_variant_bright"
                    android:textColorHint="#88BF40BF"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <EditText
                    android:id="@+id/dateBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:textSize="20sp"
                    android:background="@drawable/borde_edittext"
                    android:ems="10"
                    android:fontFamily="sans-serif"
                    android:hint="@string/fecha_de_nacimiento"
                    android:inputType="date"
                    android:focusable="false"
                    android:clickable="true"
                    android:maxLines="1"
                    android:minHeight="48dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/main_purple_variant_bright"
                    android:textColorHint="#88BF40BF" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <Spinner
                    android:id="@+id/spinnerGenre"
                    style="@style/spinnerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/spinner_item_bg"
                    android:contentDescription="@string/genreSpinnerSpeakable"
                    android:dropDownSelector="@drawable/menu"
                    android:minHeight="48dp"
                    android:overlapAnchor="false"
                    android:popupBackground="@drawable/spinner_item_bg"
                    android:textColor="@color/main_purple_variant_bright"
                    android:textColorHint="#88BF40BF" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/bRegister"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_bgless_button"
                    android:fontFamily="sans-serif"
                    android:text="@string/registrar"
                    android:textAlignment="center"
                    android:textColor="@color/main_purple_variant_bright"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="13dp" />

                <TextView
                    android:id="@+id/registerText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="sans-serif"
                    android:minHeight="48dp"
                    android:text="@string/no_tienes_cuenta_reg_strate"
                    android:textAlignment="center"
                    android:textColor="@color/main_purple"
                    android:textSize="14sp"
                    android:textStyle="italic" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>