<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgMusica"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:srcCompat="@drawable/musicnote" />

                <Space
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0" />

                <TextView
                    android:id="@+id/textTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:fontFamily="sans-serif"
                    android:text="@string/genreString"
                    android:textColor="@color/main_purple"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Spinner
                android:id="@+id/spinnerGenre"
                style="@style/spinnerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_item_bg"
                android:contentDescription="@string/genreSpinnerSpeakable"
                android:minHeight="48dp"
                android:overlapAnchor="false"
                android:popupBackground="@drawable/spinner_item_bg"
                android:textColor="@color/main_purple_variant_bright" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bAceptar"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_bgless_button"
                    android:text="@string/aceptar"
                    android:textColor="@drawable/color_text_button"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/bCancelar"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_bgless_button"
                    android:text="@string/cancelar"
                    android:textColor="@drawable/color_text_button"
                    android:textSize="13sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>