<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="top"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="250dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="250dp"
                        app:cardElevation="100dp">

                        <ImageView
                            android:id="@+id/ivAvatarTune"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_weight="0"
                            android:contentDescription="@string/avatar_del_usuario"
                            android:rotation="0"
                            android:rotationY="0"
                            android:scaleType="centerCrop"
                            tools:ignore="ImageContrastCheck" />

                    </androidx.cardview.widget.CardView>

                </androidx.cardview.widget.CardView>

                <Space
                    android:layout_width="15dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0" />

                <EditText
                    android:id="@+id/editTextTuneMsg"
                    android:maxLength="128"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:background="@drawable/borde_edittext_tune"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/stay_tuned"
                    android:inputType="textMultiLine"
                    android:minHeight="120dp"
                    android:padding="7dp"
                    android:textColor="#000000"
                    android:textColorHint="#50808080"
                    android:textSize="16sp"
                    android:autofillHints="" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="right|center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_bgless_button"
                    android:text="@string/cancelar"
                    android:textColor="@drawable/color_text_button"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="40dp"
                    android:layout_height="15dp"
                    android:layout_weight="0" />

                <Button
                    android:id="@+id/bPublish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_bgless_button"
                    android:text="@string/publicar"
                    android:textColor="@drawable/color_text_button"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>